--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,7 @@
       <button class="button__timer btn btn-primary" data-action-change>
         Свитч Таймера
       </button>
+      <p class="alert js-alert"></p>
     </div>
   </body>
 </html>
